# pinocchio-escrow-litesvm

./: Cargo.toml  Justfile  README.md
scripts/: build-sbf.sh  test-litesvm.sh  toolchain-info.sh
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: escrow_litesvm.rs  simplified-litesvm.rs
